--- a/index.html
+++ b/index.html
@@ -1,1 +1,74 @@
-Hello World 
+<!DOCTYPE html>
+<html>
+    <body style="background-color: darksalmon;">
+
+        <h1>
+            Troy Gleason
+        </h1>
+        <h2>
+            <a href="mailto:troy.gleason.1713@gmail.com">
+                Send me an email!
+            </a>
+        </h2>
+        <p>
+            <img src="headshot.jpg" alt="headshot photo" />
+        </p>
+        <h3>
+            About me
+        </h3>
+        <p>
+            I am a graduate of College of the Holy Cross with a double major in Physics and Computer Science. I spent the 2022-23 academic school year in
+            Huelva, Spain teaching English to children of all ages. Sí, hablo español con fluidez.
+        </p>
+        <img src="spain.jpg" alt="Huelva, Spain" />
+        <p>
+            I am currently pursuing a career in software engineering.
+        </p>
+        <h3>
+            <a href="Resume.pdf">
+                My Resume
+            </a>
+        </h3>
+        <h3>
+            Internship
+        </h3>
+        <p>
+            I was a physics research assistant at Holy Cross the summers of 2020 and 2021. I helped my professor develop software to simulate a model of a neutron star with dark matter. Using Numpy (the numerical Python Library), I took partial differential equations describing the star and numerically integrated them, balancing accuracy and efficiency, to show the formation of the star. Often, it would collapse to a black hole. But when it didn't, I had a model simulating the formation and lifespan of a neutron star, admixed with fermionic dark matter.
+        </p>
+        <p>
+            <a href="research_paper.pdf">
+                We even published a paper on the research!
+            </a>
+        </p>
+        <h3>
+            Relevant Coursework
+        </h3>
+        <p>
+            <b>CSCI235 Analysis of Algorithms</b>
+        </p>
+        <p>
+            <b>CSCI132 Data Structures</b>
+        </p>
+        <p>
+            <b>CSCI356 Computer Networking</b>
+        </p>
+        <p>
+            <b>CSCI324 Progamming Languages Implementation and Design</b>
+        </p>
+        <p>
+            <b>CSCI363 Computational Vision</b>
+        </p>
+        <h3>
+            Skills & Proficiencies
+        </h3>
+        <P>
+            Java, C++, Python, MATLAB, HTML/CSS, SQL, Numpy, TCP and UDP, and currently intermediate knowledge of Swift.
+        </P>
+        <!--
+        <h3>
+            <a href="https://github.com/troy1713">My Github</a>
+        </h3>
+        -->
+
+    </body>
+</html>
