--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </p>
         <img src="spain.jpg" alt="Huelva, Spain" />
         <p>
-            I am currently pursuing a career in software engineering.
+            I am currently a federal employee.
         </p>
         <h3>
             <a href="Resume.pdf">
@@ -41,34 +41,24 @@
             </a>
         </p>
         <h3>
-            Relevant Coursework
+            I am planning on obtaining a Juris Doctor, and then a master's in electrical engineering.
         </h3>
-        <p>
-            <b>CSCI235 Analysis of Algorithms</b>
-        </p>
-        <p>
-            <b>CSCI132 Data Structures</b>
-        </p>
-        <p>
-            <b>CSCI356 Computer Networking</b>
-        </p>
-        <p>
-            <b>CSCI324 Progamming Languages Implementation and Design</b>
-        </p>
-        <p>
-            <b>CSCI363 Computational Vision</b>
         </p>
         <h3>
             Skills & Proficiencies
         </h3>
         <P>
-            Java, C++, Python, MATLAB, HTML/CSS, SQL, Numpy, TCP and UDP, and currently intermediate knowledge of Swift.
+            Res ipsa loquitur.
         </P>
-        <!--
+
         <h3>
             <a href="https://github.com/troy1713">My Github</a>
         </h3>
-        -->
+
+	<h4>
+	    <a href="whotolistento.html">My current thoughts, November 1st, 2024</a>
+	</h4>
+
 
     </body>
 </html>
